--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"drizzle:generate": "drizzle-kit generate:sqlite --out ./drizzle/migrations --breakpoints --schema=./drizzle/schema.ts",
+		"drizzle:migrate": "tsx drizzle/migrate",
+		"drizzle:push": "drizzle-kit push:sqlite"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
@@ -19,6 +22,8 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
+		"dotenv": "^16.3.1",
+		"drizzle-kit": "^0.20.9",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -30,12 +35,15 @@
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.0",
 		"tslib": "^2.4.1",
+		"tsx": "^4.7.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"@libsql/client": "0.4.0-pre.5",
 		"clsx": "^2.0.0",
+		"drizzle-orm": "^0.29.2",
 		"lucide-svelte": "^0.302.0",
 		"tailwind-merge": "^2.2.0",
 		"tailwind-variants": "^0.1.19"
