--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"drizzle:generate": "drizzle-kit generate:sqlite --out ./drizzle/migrations --breakpoints --schema=./drizzle/schema.ts",
+		"drizzle:generate": "drizzle-kit generate:sqlite",
 		"drizzle:migrate": "tsx drizzle/migrate",
 		"drizzle:push": "drizzle-kit push:sqlite"
 	},
