--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
+		"drizzle:seed": "tsx src/lib/server/seed",
 		"drizzle:generate": "drizzle-kit generate:pg",
 		"drizzle:migrate": "tsx drizzle/migrate",
 		"drizzle:push": "drizzle-kit push:pg"
+		
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
