--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
+    "geist": "^1.2.0",
     "lucide-svelte": "^0.302.0",
     "postgres": "^3.4.3",
     "tailwind-merge": "^2.2.0",
