--- a/package.json
+++ b/package.json
@@ -43,14 +43,19 @@
   "dependencies": {
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.2",
-    "bits-ui": "^0.14.0",
+    "bits-ui": "^0.19.5",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.29.3",
+    "formsnap": "^0.5.1",
     "geist": "^1.2.0",
     "lucide-svelte": "^0.302.0",
+    "mode-watcher": "^0.2.2",
     "postgres": "^3.4.3",
+    "svelte-sonner": "^0.3.19",
+    "sveltekit-superforms": "^2.8.1",
     "tailwind-merge": "^2.2.0",
-    "tailwind-variants": "^0.1.19"
+    "tailwind-variants": "^0.1.19",
+    "zod": "^3.22.4"
   }
 }
