--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "tailwindcss": "^3.4.0",
     "tslib": "^2.4.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "typescript": "^5.0.0"
   },
   "type": "module",
   "dependencies": {
@@ -59,6 +58,7 @@
     "sveltekit-superforms": "^2.8.1",
     "tailwind-merge": "^2.2.0",
     "tailwind-variants": "^0.1.19",
+    "vite": "^5.2.8",
     "zod": "^3.22.4"
   }
 }
