--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-  "name": "svelte-markdown-blog",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "drizzle:seed": "tsx src/lib/server/seed",
-    "drizzle:generate": "drizzle-kit generate:pg",
-    "drizzle:migrate": "tsx drizzle/migrate",
-    "drizzle:push": "drizzle-kit push:pg"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "8.56.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "mdsvex": "^0.11.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.4.0",
-    "tslib": "^2.4.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.0.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@supabase/ssr": "^0.0.10",
-    "@supabase/supabase-js": "^2.39.2",
-    "bits-ui": "^0.19.7",
-    "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.29.3",
-    "eslint-plugin-drizzle": "^0.2.3",
-    "formsnap": "^0.5.1",
-    "geist": "^1.2.0",
-    "lucide-svelte": "^0.302.0",
-    "mode-watcher": "^0.2.2",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3",
-    "svelte-sonner": "^0.3.19",
-    "sveltekit-superforms": "^2.8.1",
-    "tailwind-merge": "^2.2.0",
-    "tailwind-variants": "^0.1.19",
-    "vite": "^5.2.8",
-    "zod": "^3.22.4"
-  }
+	"name": "svelte-markdown-blog",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"drizzle:seed": "tsx src/lib/server/seed",
+		"drizzle:generate": "drizzle-kit generate:pg",
+		"drizzle:migrate": "tsx drizzle/migrate",
+		"drizzle:push": "drizzle-kit push:pg"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "8.56.0",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"autoprefixer": "^10.4.16",
+		"drizzle-kit": "^0.20.14",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"mdsvex": "^0.11.0",
+		"postcss": "^8.4.32",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.5.9",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.0",
+		"tslib": "^2.4.1",
+		"tsx": "^4.7.0",
+		"typescript": "^5.0.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@supabase/ssr": "^0.0.10",
+		"@supabase/supabase-js": "^2.39.2",
+		"bits-ui": "^0.19.7",
+		"clsx": "^2.0.0",
+		"dotenv": "^16.3.1",
+		"drizzle-orm": "^0.29.3",
+		"eslint-plugin-drizzle": "^0.2.3",
+		"formsnap": "^0.5.1",
+		"geist": "^1.2.0",
+		"lucide-svelte": "^0.302.0",
+		"mode-watcher": "^0.2.2",
+		"pg": "^8.11.3",
+		"postgres": "^3.4.3",
+		"svelte-sonner": "^0.3.19",
+		"sveltekit-superforms": "^2.8.1",
+		"tailwind-merge": "^2.2.0",
+		"tailwind-variants": "^0.1.19",
+		"vite": "^5.2.8",
+		"zod": "^3.22.4"
+	}
 }
