fixed syntax highlighting in MDsveX

--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "remark-github": "^12.0.0",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.4.0",
@@ -43,6 +42,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@bitmachina/highlighter": "^1.0.0-alpha.7",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.2",
     "bits-ui": "^0.19.7",
@@ -51,11 +51,13 @@
     "drizzle-orm": "^0.29.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "formsnap": "^0.5.1",
-    "geist": "^1.2.0",
     "lucide-svelte": "^0.302.0",
     "mode-watcher": "^0.2.2",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "remark-gfm": "^4.0.0",
+    "remark-github": "^12.0.0",
+    "shiki": "^1.2.4",
     "svelte-sonner": "^0.3.19",
     "sveltekit-superforms": "^2.8.1",
     "tailwind-merge": "^2.2.0",
