--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwind-variants": "^0.1.19",
     "vite": "^5.2.8",
+    "vite-imagetools": "^7.0.1",
     "zod": "^3.22.4"
   }
 }
