--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@bitmachina/highlighter": "^1.0.0-alpha.7",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.2",
+    "@sveltejs/enhanced-img": "^0.2.0",
     "bits-ui": "^0.19.7",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -64,7 +65,6 @@
     "tailwind-merge": "^2.2.0",
     "tailwind-variants": "^0.1.19",
     "vite": "^5.2.8",
-    "vite-imagetools": "^7.0.1",
     "zod": "^3.22.4"
   }
 }
