--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github": "^12.0.0",
     "shiki": "^1.2.4",
+    "svelte-cloudinary": "^1.3.2",
     "svelte-sonner": "^0.3.19",
     "sveltekit-superforms": "^2.8.1",
     "tailwind-merge": "^2.2.0",
