--- a/package.json
+++ b/package.json
@@ -16,56 +16,64 @@
     "drizzle:push": "drizzle-kit push:pg"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tailwindcss/typography": "^0.5.12",
     "@types/eslint": "8.56.0",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.20.17",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint-plugin-svelte": "^2.38.0",
     "mdsvex": "^0.11.0",
     "mdsvex-reading-time": "^1.0.4",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.4.0",
-    "tslib": "^2.4.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.0.0"
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "svelte": "^4.2.15",
+    "svelte-check": "^3.7.0",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.6.2",
+    "tsx": "^4.7.3",
+    "typescript": "^5.4.5"
   },
   "type": "module",
   "dependencies": {
     "@bitmachina/highlighter": "^1.0.0-alpha.7",
-    "@supabase/ssr": "^0.0.10",
-    "@supabase/supabase-js": "^2.39.2",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.7",
     "@sveltejs/enhanced-img": "^0.2.0",
     "bits-ui": "^0.19.7",
-    "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "drizzle-orm": "^0.29.3",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.29.5",
     "eslint-plugin-drizzle": "^0.2.3",
     "formsnap": "^0.5.1",
     "lucide-svelte": "^0.302.0",
     "mode-watcher": "^0.2.2",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "remark-gfm": "^4.0.0",
     "remark-github": "^12.0.0",
-    "shiki": "^1.2.4",
+    "shiki": "^1.3.0",
     "svelte-cloudinary": "^1.3.2",
-    "svelte-sonner": "^0.3.19",
-    "sveltekit-superforms": "^2.8.1",
-    "tailwind-merge": "^2.2.0",
-    "tailwind-variants": "^0.1.19",
-    "vite": "^5.2.8",
-    "zod": "^3.22.4"
-  }
+    "svelte-sonner": "^0.3.22",
+    "sveltekit-superforms": "^2.12.6",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.1.20",
+    "vite": "^5.2.10",
+    "zod": "^3.23.4"
+  },
+  "trustedDependencies": [
+    "@sveltejs/kit",
+    "core-js",
+    "es5-ext",
+    "esbuild",
+    "sharp",
+    "svelte-preprocess"
+  ]
 }
